<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2020 Paul Rybitskyi, paul.rybitskyi.work@gmail.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/game_details_card_background_color"
    tools:parentTag="com.google.android.material.card.MaterialCardView"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/game_details_container_margin">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/game_details_title_margin_bottom"
            android:text="@string/game_details_title"
            android:textColor="@color/game_details_title_text_color"
            android:textSize="@dimen/game_details_title_text_size"
            android:fontFamily="@string/font_family_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/genresTitleTv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genresTitleTv"
            android:text="@string/game_details_genres_title"
            style="@style/Gamedge.GameInfo.Details.CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/titleTv"
            app:layout_constraintBottom_toTopOf="@id/genresTv"/>

        <TextView
            android:id="@+id/genresTv"
            style="@style/Gamedge.GameInfo.Details.CategoryValue"
            app:layout_constraintTop_toBottomOf="@id/genresTitleTv"
            app:layout_constraintBottom_toTopOf="@id/platformsTitleTv"
            tools:text="Adventure &#8226; Shooter &#8226; Role-playing (RPG)"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/genresContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="genresTitleTv, genresTv"/>

        <TextView
            android:id="@+id/platformsTitleTv"
            android:text="@string/game_details_platforms_title"
            style="@style/Gamedge.GameInfo.Details.CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/genresTv"
            app:layout_constraintBottom_toTopOf="@id/platformsTv"/>

        <TextView
            android:id="@+id/platformsTv"
            style="@style/Gamedge.GameInfo.Details.CategoryValue"
            app:layout_constraintTop_toBottomOf="@id/platformsTitleTv"
            app:layout_constraintBottom_toTopOf="@id/modesTitleTv"
            tools:text="PC &#8226; PS4 &#8226; XONE &#8226; PS5 &#8226; Series X &#8226; Stadia"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/platformsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="platformsTitleTv, platformsTv"/>

        <TextView
            android:id="@+id/modesTitleTv"
            android:text="@string/game_details_modes_title"
            style="@style/Gamedge.GameInfo.Details.CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/platformsTv"
            app:layout_constraintBottom_toTopOf="@id/modesTv"/>

        <TextView
            android:id="@+id/modesTv"
            style="@style/Gamedge.GameInfo.Details.CategoryValue"
            app:layout_constraintTop_toBottomOf="@id/modesTitleTv"
            app:layout_constraintBottom_toTopOf="@id/playerPerspectivesTitleTv"
            tools:text="Single Player &#8226; Multiplayer"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/modesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="modesTitleTv, modesTv"/>

        <TextView
            android:id="@+id/playerPerspectivesTitleTv"
            android:text="@string/game_details_player_perspectives_title"
            style="@style/Gamedge.GameInfo.Details.CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/modesTv"
            app:layout_constraintBottom_toTopOf="@id/playerPerspectivesTv"/>

        <TextView
            android:id="@+id/playerPerspectivesTv"
            style="@style/Gamedge.GameInfo.Details.CategoryValue"
            app:layout_constraintTop_toBottomOf="@id/playerPerspectivesTitleTv"
            app:layout_constraintBottom_toTopOf="@id/themesTitleTv"
            tools:text="First person &#8226; Third person"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/playerPerspectivesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="playerPerspectivesTitleTv, playerPerspectivesTv"/>

        <TextView
            android:id="@+id/themesTitleTv"
            android:text="@string/game_details_themes_title"
            style="@style/Gamedge.GameInfo.Details.CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/playerPerspectivesTv"
            app:layout_constraintBottom_toTopOf="@id/themesTv"/>

        <TextView
            android:id="@+id/themesTv"
            style="@style/Gamedge.GameInfo.Details.CategoryValue"
            app:layout_constraintTop_toBottomOf="@id/themesTitleTv"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Action &#8226; Science Fiction &#8226; Horror &#8226; Survival"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/themesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="themesTitleTv, themesTv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>